--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <h1>Feeds</h1>
     <ul>
         {% for filename in xml_files %}
-            <li><a href="{{ url_for('display_feed', year_month=year_month, filename=filename) }}">{{ filename }}</a></li>
+            <li><a href="{{ url_for('display_feed', year_month=year_month, filename=filename) }}">{{ "_".join(filename.split("_")[1:]).replace(".xml","") }}</a></li>
         {% endfor %}
     </ul>
 </body>
