updated URLs for author, date, subject. Updated code for xml generation

--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,40 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bitcoin-dev Archives</title>
-    <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: left;
-        }
-    </style>
-</head>
-<body>
-    <h1>The bitcoin-dev Archives Summary</h1>
-    <p>You can get <a href="https://lists.linuxfoundation.org/mailman/listinfo/bitcoin-dev">more information</a> about this list.</p>
-    <table>
-        <tr>
-            <th>Archive</th>
-            <th>View by:</th>
-        </tr>
-        {% for row in data %}
-        <tr>
-            <td>{{ row.month }}:</td>
-            <td>
-                [<a href="{{ url_for('thread', year_month=row.month|replace(' ', '_')) }}">Thread</a>]
-                [ <a href="#">Subject</a> ]
-                [ <a href="#">Author</a> ]
-                [ <a href="#">Date</a> ]
-            </td>
-        </tr>
-        {% endfor %}
-    </table>
-</body>
-</html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<HTML>
+
+<HEAD>
+   <title>The bitcoin-dev Archives Summary</title>
+   <META NAME="robots" CONTENT="noindex,follow">
+   <META http-equiv="Content-Type" content="text/html; charset=us-ascii">
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+   <h1>The bitcoin-dev Archives Summary</h1>
+   <p>
+      You can get <a href="https://lists.linuxfoundation.org/mailman/listinfo/bitcoin-dev">more information about this
+         list</a>.
+   </p>
+
+   <table border=3>
+      <tr>
+         <td>Archive</td>
+         <td>View by:</td>
+         <td>Downloadable version</td>
+      </tr>
+
+      {% for row in data %}
+      <tr>
+         <td>{{ row.month }}:</td>
+         <td>
+            <A href="{{url_for('thread', year_month=row.month|replace(' ', '_'))}}">[ Thread ]</a>
+            <A href="{{url_for('subject', year_month=row.month|replace(' ', '_'))}}">[ Subject ]</a>
+            <A href="{{url_for('author', year_month=row.month|replace(' ', '_'))}}">[ Author ]</a>
+            <A href="{{url_for('date', year_month=row.month|replace(' ', '_'))}}">[ Date ]</a>
+         </td>
+         <td><A href="#">[ Gzip'd Text 31 KB ]</a></td>
+      </tr>
+
+
+      <tr>
+         {% endfor %}
+   </table>
+
+</BODY>
+
+</HTML>
