--- a/templates/feed.html
+++ b/templates/feed.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,27 +8,30 @@
     <title>Atom Feed Display</title>
     <style type="text/css">
         pre {
-            white-space: pre-wrap;       /* css-2.1, curent FF, Opera, Safari */
-            }
+            white-space: pre-wrap;
+            /* css-2.1, curent FF, Opera, Safari */
+        }
     </style>
 </head>
+
 <body BGCOLOR="#fffffb">
     <h1>{{ feed.feed.title }}</h1>
     <hr>
     <ul>
-    
-    {% for entry in feed.entries %}
-    {% for author in feed.feed.authors %}
-    <p><b>Author:</b> {{ author.name }}</p>
-    {% endfor %}
-        <a href="{{ entry.link }}">click here to read brief discussion</a> 
-        <p>Published on: {{ entry.published }}</p> 
+
+        {% for entry in feed.entries %}
+        {% for author in feed.feed.authors %}
+        <p><b>Author:</b> {{ author.name }}</p>
+        {% endfor %}
+        <a href="{{ entry.link }}">click here to read brief discussion</a>
+        <p>Published on: {{ entry.published }}</p>
         <hr>
         <h3> Summary:</h3>
-            <p>{{ entry.summary }}</p>
-    {% endfor %}
+        <p>{{ entry.summary }}</p>
+        {% endfor %}
     </ul>
     <hr>
     <p>Updated on: {{ feed.feed.updated }}</p>
 </body>
+
 </html>
