--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feeds</title>
 </head>
+
 <body>
     <h1>Feeds</h1>
     <ul>
         {% for filename in xml_files %}
-            <li><a href="{{ url_for('display_feed', year_month=year_month, filename=filename) }}">{{ "_".join(filename.split("_")[1:]).replace(".xml","") }}</a></li>
+        <li><a href="{{ url_for('display_feed', year_month=year_month, filename=filename) }}">{{
+                "_".join(filename.split("_")[1:]).replace(".xml","") }}</a></li>
         {% endfor %}
     </ul>
 </body>
+
 </html>
