added links in the view and made changes in the prompt for creating summary

--- a/templates/feed.html
+++ b/templates/feed.html
@@ -41,7 +41,7 @@
             <p>Published on: {{ entry.published }}</p>
             <hr>
             <h3> Summary:</h3>
-            <p>{{ entry.summary }}</p>
+            <p>{{ entry.summary|linkify }}</p>
         {% endfor %}
     </ul>
     <hr>
