--- a/templates/index.html
+++ b/templates/index.html
@@ -5,38 +5,44 @@
    <title>The bitcoin-dev Archives Summary</title>
    <META NAME="robots" CONTENT="noindex,follow">
    <META http-equiv="Content-Type" content="text/html; charset=us-ascii">
+   <link rel="stylesheet" href="../homepage_styles.css">
 </HEAD>
 
 <BODY BGCOLOR="#ffffff">
-   <h1>The bitcoin-dev Archives Summary</h1>
+   <br><br>
+   <h1>bitcoin-dev Summaries</h1>
+   <hr class="solid">
    <p>
-      You can get <a href="https://lists.linuxfoundation.org/mailman/listinfo/bitcoin-dev">more information about this
-         list</a>.
+      Summaries of posts and threads in the <a href="https://lists.linuxfoundation.org/mailman/listinfo/bitcoin-dev">bitcoin-dev</a> mailing list
    </p>
 
-   <table border=3>
+   <table>
       <tr>
-         <td>Archive</td>
-         <td>View by:</td>
+         <td></td>
+         <td></td>
 <!--         <td>Downloadable version</td>-->
       </tr>
 
       {% for row in data %}
-      <tr>
-         <td>{{ row.month }}:</td>
-         <td>
-            <A href="{{url_for('thread', year_month=row.month|replace(' ', '_'))}}">[ Thread ]</a>
-<!--            <A href="{{url_for('subject', year_month=row.month|replace(' ', '_'))}}">[ Subject ]</a>-->
-<!--            <A href="{{url_for('author', year_month=row.month|replace(' ', '_'))}}">[ Author ]</a>-->
-<!--            <A href="{{url_for('date', year_month=row.month|replace(' ', '_'))}}">[ Date ]</a>-->
-         </td>
-<!--         <td><A href="#">[ Gzip'd Text 31 KB ]</a></td>-->
-      </tr>
+         <tr>
+            <td>{{ row.month }}:</td>
+            <td>
+               <A href="{{url_for('thread', year_month=row.month|replace(' ', '_'))}}">[ Thread ]</a>
+   <!--            <A href="{{url_for('subject', year_month=row.month|replace(' ', '_'))}}">[ Subject ]</a>-->
+   <!--            <A href="{{url_for('author', year_month=row.month|replace(' ', '_'))}}">[ Author ]</a>-->
+   <!--            <A href="{{url_for('date', year_month=row.month|replace(' ', '_'))}}">[ Date ]</a>-->
+            </td>
+   <!--         <td><A href="#">[ Gzip'd Text 31 KB ]</a></td>-->
+         </tr>
 
 
-      <tr>
-         {% endfor %}
+         <tr>
+     {% endfor %}
    </table>
+
+   <footer>
+      <span style="font-family: Arial, Helvetica, sans-serif;">&#10084;&#65039;</span> <a href="https://chaincode.com" target="_blank" rel="noreferrer" style="text-decoration: none; color: inherit;">Chaincode</a>
+   </footer>
 
 </BODY>
 
