changed position in the footer

--- a/css/archive_styles.css
+++ b/css/archive_styles.css
@@ -1,10 +1,15 @@
+.main-container {
+    min-height: calc(100vh - 2.5rem);
+    position: relative;
+}
+
 hr.solid {
     border-top: 3px solid #feda09;
 }
 
 footer {
     width: 90%;
-    position: absolute;
+    position: relative;
     text-align: right;
     bottom: 0;
     font-family: 'Courier New', Courier, monospace;
@@ -20,11 +25,11 @@ pre {
     color: #ff9900;
 }
 
-a:link{
+a:link {
     color: #0945c3;
 }
 
-a:visited{
+a:visited {
     color: #019d71;
 }
 
