made changes in index page and changed XML generation code

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <HTML>
 
 <HEAD>
-   <title>The bitcoin-dev Archives Summary</title>
+   <title>The bitcoin-dev/lightning-dev Archives Summary</title>
    <META NAME="robots" CONTENT="noindex,follow">
    <META http-equiv="Content-Type" content="text/html; charset=us-ascii">
 
@@ -26,10 +26,10 @@
 
       {% for row in data %}
          <tr>
-            <td>{{ row.month }}:</td>
+            <td></td>
             {% if "bitcoin-dev" in row.dev_name %}
                <td class="center-text">
-                  <A href="{{url_for('thread', dev_name=row.dev_name, year_month=row.month|replace(' ', '_'))}}">[ Thread ]</a>
+                  <A href="{{url_for('thread', dev_name=row.dev_name, year_month=row.month|replace(' ', '_'))}}">[ {{row.month}} ]</a>
                </td>
                 <td class="center-text">
                   -
@@ -39,7 +39,7 @@
                   -
                </td>
                 <td class="center-text">
-                  <A href="{{url_for('thread', dev_name=row.dev_name, year_month=row.month|replace(' ', '_'))}}">[ Thread ]</a>
+                  <A href="{{url_for('thread', dev_name=row.dev_name, year_month=row.month|replace(' ', '_'))}}">[ {{row.month}} ]</a>
                </td>
             {% endif %}
          </tr>
