--- a/templates/thread.html
+++ b/templates/thread.html
@@ -15,13 +15,13 @@
   <hr class="solid">
   <br>
 
-  <b>Sort Summaries by:</b>
+  <!-- <b>Sort Summaries by:</b>
       <a href="{{url_for('subject', dev_name=dev_name, year_month=year_month)}}">[ subject ]</a>
       <a href="{{url_for('author', dev_name=dev_name, year_month=year_month)}}">[ author ]</a>
       <a href="{{url_for('date', dev_name=dev_name, year_month=year_month)}}">[ date ]</a>
       <a href="{{url_for('thread', dev_name=dev_name, year_month=year_month)}}">[ thread ]</a>
 
-  <br><br>
+  <br><br> -->
   {% if "bitcoin-dev" in dev_name %}
     <b>More info on the <a href="https://lists.linuxfoundation.org/mailman/listinfo/bitcoin-dev">bitcoin-dev</a> mailing list</b>
   {% else %}
