updated position of footer in main page

--- a/css/homepage_styles.css
+++ b/css/homepage_styles.css
@@ -22,8 +22,8 @@ td {
 }
 
 footer {
-    width: 70%;
-    position: absolute;
+    width: 90%;
+    position: relative;
     text-align: right;
     bottom: 0;
     font-family: 'Courier New', Courier, monospace;
