--- a/templates/index.html
+++ b/templates/index.html
@@ -25,27 +25,32 @@
       </tr>
 
       {% for row in data %}
+      {% set bitcoin_dev_exists = data|selectattr("dev_name", "equalto", "bitcoin-dev")|selectattr("month", "equalto", row.month)|list %}
+      {% set lightning_dev_exists = data|selectattr("dev_name", "equalto", "lightning-dev")|selectattr("month", "equalto", row.month)|list %}
+      {% if loop.first or loop.previtem.month != row.month %}
          <tr>
             <td></td>
-            {% if "bitcoin-dev" in row.dev_name %}
-               <td class="center-text">
-                  <A href="{{url_for('thread', dev_name=row.dev_name, year_month=row.month|replace(' ', '_'))}}">[ {{row.month}} ]</a>
-               </td>
+            {% if bitcoin_dev_exists|length > 0 %}
                 <td class="center-text">
-                  -
-               </td>
+                    <A href="{{url_for('thread', dev_name='bitcoin-dev', year_month=row.month|replace(' ', '_'))}}">[ {{row.month}} ]</a>
+                </td>
             {% else %}
-               <td class="center-text">
-                  -
-               </td>
                 <td class="center-text">
-                  <A href="{{url_for('thread', dev_name=row.dev_name, year_month=row.month|replace(' ', '_'))}}">[ {{row.month}} ]</a>
-               </td>
+                    -
+                </td>
             {% endif %}
-         </tr>
-
-         <tr>
-     {% endfor %}
+            {% if lightning_dev_exists|length > 0 %}
+                <td class="center-text">
+                    <A href="{{url_for('thread', dev_name='lightning-dev', year_month=row.month|replace(' ', '_'))}}">[ {{row.month}} ]</a>
+                </td>
+            {% else %}
+                <td class="center-text">
+                    -
+                </td>
+            {% endif %}
+        </tr>
+      {% endif %}
+      {% endfor %}
    </table>
 
    <footer>
