changed months in frontend upto 3 letters

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,8 @@
             <td></td>
             {% if bitcoin_dev_exists|length > 0 %}
                 <td class="center-text">
-                    <A href="{{url_for('thread', dev_name='bitcoin-dev', year_month=row.month|replace(' ', '_'))}}">[ {{row.month}} ]</a>
+<!--                    <A href="{{url_for('thread', dev_name='bitcoin-dev', year_month=row.month|replace(' ', '_'))}}">[ {{row.month}} ]</a>-->
+                    <A href="{{url_for('thread', dev_name='bitcoin-dev', year_month=row.month|replace(' ', '_'))}}">[ {{row.month.split()[0][:3] }} {{row.month.split()[1] }} ]</a>
                 </td>
             {% else %}
                 <td class="center-text">
@@ -41,7 +42,8 @@
             {% endif %}
             {% if lightning_dev_exists|length > 0 %}
                 <td class="center-text">
-                    <A href="{{url_for('thread', dev_name='lightning-dev', year_month=row.month|replace(' ', '_'))}}">[ {{row.month}} ]</a>
+                    <A href="{{url_for('thread', dev_name='lightning-dev', year_month=row.month|replace(' ', '_'))}}">[ {{row.month.split()[0][:3] }} {{row.month.split()[1] }} ]</a>
+<!--                    <A href="{{url_for('thread', dev_name='lightning-dev', year_month=row.month|replace(' ', '_'))}}">[ {{row.month}} ]</a>-->
                 </td>
             {% else %}
                 <td class="center-text">
