--- a/templates/thread.html
+++ b/templates/thread.html
@@ -36,12 +36,12 @@
   <UL>
     {% for post in posts %}
       {% if "Combined" in post.title%}
-        <LI><span class="combined-summary">[Combined Summary]</span><A HREF="{{ url_for('display_feed', dev_name=dev_name, year_month=year_month, filename=post.filename) }}">[{{ post.title.split(" - ")[1] }}]</A>
+        <LI><span class="combined-summary">[Combined Summary]</span><A HREF="{{ url_for('display_feed', dev_name=dev_name, year_month=year_month, filename=post.filename[:-4]) }}">[{{ post.title.split(" - ")[1] }}]</A>
           <I>{{ post.author }}
           </I>
         </LI>
       {% else %}
-        <LI><A HREF="{{ url_for('display_feed', dev_name=dev_name, year_month=year_month, filename=post.filename) }}">[{{ post.title }}]</A>
+        <LI><A HREF="{{ url_for('display_feed', dev_name=dev_name, year_month=year_month, filename=post.filename[:-4]) }}">[{{ post.title }}]</A>
           <I>{{ post.author }}
           </I>
         </LI>
