Removed unfinished sentences from the summary page

--- a/templates/feed.html
+++ b/templates/feed.html
@@ -42,7 +42,7 @@
         <p><i>Published on: {{ entry.published }}</i></p>
         <hr>
         <h3>Summary:</h3>
-        <p>{{ entry.summary|linkify }}</p>
+        <p>{{ entry.summary|remove_unfinished }}</p>
         <hr>
         <p><i>Updated on: {{ feed.feed.updated }}</i></p>
     {% endfor %}
@@ -86,7 +86,7 @@
 
     <hr>
     <h3> Summary:</h3>
-    <p>{{ entry.summary|linkify }}</p>
+    <p>{{ entry.summary|remove_unfinished }}</p>
     <hr>
     <p><i> Updated on: {{ feed.feed.updated }} </i></p>
     {% endfor %}
